--- a/AdventureKaan/app/src/main/res/layout/fragment_zonas_container.xml
+++ b/AdventureKaan/app/src/main/res/layout/fragment_zonas_container.xml
@@ -14,47 +14,61 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
+            <ImageView
+                android:id="@+id/IconImageView"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                app:contentPadding="10dp">
-                <androidx.cardview.widget.CardView
+                android:background="@drawable/fondo"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardBackgroundColor="#4DB6AB">
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:cardCornerRadius="20dp">
-                    <ImageView
-                        android:id="@+id/IconImageView"
+                    android:layout_gravity="center">
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_gravity="center"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/fondo"/>
-                </androidx.cardview.widget.CardView>
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/rye_regular"
+                        android:text="Chichén Itzá"
+                        android:textAlignment="center"
+                        android:textColor="#FFF"
+                        android:textSize="50dp" />
+                </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-                app:contentPadding="10dp">
+                android:layout_height="250dp"
+                app:contentPadding="10dp"
+                app:cardCornerRadius="20dp"
+
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginBottom="5dp"
+
+                android:focusable="false"
+                >
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    app:cardCornerRadius="20dp"
-                    app:cardBackgroundColor="#4DB6AB">
-                    <LinearLayout
+                    app:cardCornerRadius="20dp">
+                    <fragment
+                        android:id="@+id/map"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center">
-                        <TextView
-                            android:id="@+id/title"
-                            android:layout_gravity="center"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/rye_regular"
-                            android:text="Chichén Itzá"
-                            android:textAlignment="center"
-                            android:textColor="@color/parrafo_color"
-                            android:textSize="50dp" />
-                    </LinearLayout>
+                        android:layout_height="match_parent"/>
                 </androidx.cardview.widget.CardView>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -78,35 +92,7 @@
                 </androidx.cardview.widget.CardView>
 
             </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                app:contentPadding="10dp">
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardCornerRadius="20dp"
-                    app:cardBackgroundColor="#4DB6AB">
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center">
-                        <TextView
-                            android:id="@+id/title2"
-                            android:layout_gravity="center"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/rye_regular"
-                            android:text="Chichén Itzá"
-                            android:textAlignment="center"
-                            android:textColor="@color/parrafo_color"
-                            android:textSize="50dp" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </androidx.cardview.widget.CardView>
-
-
+            
         </LinearLayout>
 
     </ScrollView>
